--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,8 @@ SQLAlchemy = "==1.4.19"
 Werkzeug = "==2.0.1"
 WTForms = "==2.3.3"
 boto3 = "*"
+flask-socketio = "*"
+eventlet = "==0.30.2"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
